# JoTang2025

./: #1github_setup.md  #3ubuntu_setup.md  #4cmake.md  .gitattributes  fix_markdown_images.py  github_setup.md  markdown_image_fix_guide.md  test_images.html  titanic_model.pth  修复Markdown图片路径.bat
#3/: #3ubuntu_setup.md
#4/demo-main/MakeFile/: CMakeLists.txt  Makefile
#4/demo-main/compile_process/: demo.i
#5/: #5task0.md
#5/task0/: #5task0.md
#5/task1/: #5task1.md  moons.csv  moons_loader.py  nn.py
#5/task1/markdown_record/: #5task1.md
#5/task1/weights/: nn.pth
#5/task2/bi_class/: Titanic_loader.py  nn.py  nn2.py  submission.csv  test_nn.py  titanic_model.pth
#5/task2/markdown_record/: #5task2.md
#5/task2/multi_class/: iris.csv  iris_loader.py  nn.py
#5/task2/regression/: housing.csv  housing_loader.py  nn.py
#5/task3/: data.py  model.py  q1_test.py  q1_train.py
#5/task3/code/: data.py  q1_test.py  q1_train.py
#5/task3/results/: q1_model.pt  q1_test.txt
1/: #1.md
3/: #3.md
4/: #4cmake.md
4/demo-main/compile_process/: demo.s
5/task0/: #5task0.md
5/task1/: moons.csv  moons_loader.py  nn.py
5/task1/record/: #5task1.md
5/task2/bi_classification/: Titanic_loader.py  experiment_log.md  nn.py  submission.csv  titanic_model.pth
5/task2/multi_classification/: iris.csv  iris_loader.py  nn.py
5/task2/regression/: nn.py
5/task3/code/: data.py  model.py  q1_test.py  q1_train.py  q2.py  q3.py  self_q2.py  self_q3.py
5/task3/results/: q1_model.pt  q1_test.txt  report.md
5/task4/: GULE_SST.py  training_config.txt
(+171 files in other folders)
